@@ -39,6 +39,8 @@ SWITCHwayf Version History
     The logos will be dynamically loaded and only if they are visible
   - Added new setting $showNumOfPreviouslyUsedIdPs to standalone and embedded  
     WAYF to show last n used IdPs at top of drop down list. Default is 3.
+  - Added Embedded WAYF option wayf_overwrite_from_other_federations_text  
+    to overwrite the category name of IdPs from other federations
   - Various Javascript improvements to offload computation from WAYF to client
   - Replaced the term 'Home Organisation' in the language strings to more
     generic terms that probably are better understood by users.
